updating with required changes

--- a/core/igb/src/main/resources/igb.properties
+++ b/core/igb/src/main/resources/igb.properties
@@ -410,4 +410,4 @@ selectionInforTooltip=Click to get information about selected item.
 defaultExportFileName=IGB
 exportDialogTitle=Export Image
 
-bamIndexNotFound=Could not load index file for {0} An index file is required for BAM files.
+bamIndexNotFound=Could not load index file for {0}. An index file is required for BAM files.
