--- a/core/genometryImpl/src/main/resources/genometry.properties
+++ b/core/genometryImpl/src/main/resources/genometry.properties
@@ -97,3 +97,5 @@ noHandler=no file handler for file type .{0}, you may need to install a plugin.
 quickloadConnectError=QuickLoad site {0} is not responding at this time. Disabling it for this session. Try again later to access {0}. Please contact the server administrators and the IGB development team to let us know about the problem.
 quickloadContentError=QuickLoad site {0} does not have a contents description file (contents.txt) describing available genomes. Please contact the server administrators or the IGB development team to let us know about the problem.
 connectError={0} {1} is not responding. Disabling it for this session.
+
+tooManyContigsError=The file contains data for too many sequences; some may not be shown. If this is a problem, please compress and index the file using tabix. For more information, contact the IGB Support Team.
