Modified the message

--- a/core/genometryImpl/src/main/resources/genometry.properties
+++ b/core/genometryImpl/src/main/resources/genometry.properties
@@ -98,4 +98,4 @@ quickloadConnectError=QuickLoad site {0} is not responding at this time. Disabli
 quickloadContentError=QuickLoad site {0} does not have a contents description file (contents.txt) describing available genomes. Please contact the server administrators or the IGB development team to let us know about the problem.
 connectError={0} {1} is not responding. Disabling it for this session.
 
-tooManyContigsError=The file contains data for too many sequences; some may not be shown. If this is a problem, please compress and index the file using tabix. For more information, contact the IGB Support Team.
+tooManyContigsError=The file contains data for too many sequences; some may not be shown. If this is a problem, please compress and index the file using tabix.
