support for showAsPaired trackstyle attribute added adn toggle action created

--- a/core/igb/src/main/resources/igb.properties
+++ b/core/igb/src/main/resources/igb.properties
@@ -220,6 +220,7 @@ setColorByScore=Set Range of Color by Score
 lockTierHeightAction=Lock Tier Height
 unlockTierHeightAction=Unlock Tier Height
 zoomOnSelected=Zoom to Selected
+toggleShowAsPaired=Show as Paired
 
 #Load strategies
 LoadStrategy=Don't Load
