--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,7 @@
                 <module>developmentPlugins/BAMIndexer</module>
                 <module>developmentPlugins/NCBIPrimer</module>
             </modules>
-        </profile>      
+        </profile>   
     </profiles>
     
     
@@ -613,6 +613,24 @@
                 </plugin>                    
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <inherited>false</inherited>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>${project.parent.basedir}/bundles</directory>
+                            <includes>
+                                <include>*.jar</include>
+                            </includes>
+                            <followSymlinks>false</followSymlinks>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
     
 
