--- a/plugins/NCBIBlast/pom.xml
+++ b/plugins/NCBIBlast/pom.xml
@@ -27,6 +27,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>	
+            <scope>provided</scope>		
+        </dependency>
+        <dependency>
             <groupId>com.affymetrix</groupId>
             <artifactId>genometryImpl</artifactId>
             <scope>provided</scope>
