--- a/build.xml
+++ b/build.xml
@@ -65,7 +65,7 @@
 		<property name="def.prefs.dir"       value="${basedir}/core/igb/resources" />
 		
 		<!-- list the libraries to create bundle -->
-		<property name="include.lib" value="affx_fusion,be.pwnt.jflow_1.0.0,freehep-2.1.1,jdom-1.1.3,colt,commons-net-2.0,image4j,jide,jlfgr-1_0,log4j-1.2.11,picard,swing-layout,ant-1.7.1,lambdaj-2.4-with-dependencies,JGoogleAnalytics_0.4,commons-io-2.4,commons-csv-1.0,guava-16.0.1"/>
+		<property name="include.lib" value="affx_fusion,be.pwnt.jflow_1.0.0,freehep-graphicsio-svg-2.3,jdom-1.1.3,colt,commons-net-2.0,image4j,jide,jlfgr-1_0,log4j-1.2.11,picard,swing-layout,ant-1.7.1,lambdaj-2.4-with-dependencies,JGoogleAnalytics_0.4,commons-io-2.4,commons-csv-1.0,guava-16.0.1"/>
 
 		<!-- list the libraries to extend bundle -->
 		<property name="sam"				 value="${jar_extensions}/sam" />
@@ -548,7 +548,7 @@
 				<include name="protannot.jar"/>
 			</zipgroupfileset>
 			<zipgroupfileset dir="${lib.dir}">
-				<include name="freehep-2.1.1.jar"/>
+				<include name="freehep-graphicsio-svg-2.3.jar"/>
 				<include name="jlfgr-1_0.jar"/>
 				<include name="tango-icon-theme-0.8.90.jar"/>
 				<include name="colt.jar" />
@@ -582,7 +582,7 @@
 				<include name="genometry.jar"/>
 			</zipgroupfileset>
 			<zipgroupfileset dir="${lib.dir}">
-				<include name="freehep-2.1.1.jar"/>
+				<include name="freehep-graphicsio-svg-2.3.jar"/>
 				<include name="jlfgr-1_0.jar"/>
 				<include name="tango-icon-theme-0.8.90.jar"/>
 				<include name="colt.jar" />
@@ -635,7 +635,7 @@
 			<jvmarg line="${apple.jvmargs}" />
 			<sysproperty key="apple.laf.useScreenMenuBar" value="true" />
 			<classpath>
-				<fileset dir="${lib.dir}" includes="freehep-2.1.1.jar" />
+				<fileset dir="${lib.dir}" includes="freehep-graphicsio-svg-2.3.jar" />
 				<fileset dir="${lib.dir}" includes="jlfgr-1_0.jar"/>
 				<fileset dir="${lib.dir}" includes="colt.jar" />
 				<fileset dir="${lib.dir}" includes="sam.jar" />
@@ -652,7 +652,7 @@
 	<target name="debug-nb-protannot" depends="compile" description="debug protannot" >
         <nbjpdastart addressproperty="jpda.address" name="protannot" transport="dt_socket">
             <classpath>
-				<fileset dir="${lib.dir}" includes="freehep-2.1.1.jar" />
+				<fileset dir="${lib.dir}" includes="freehep-graphicsio-svg-2.3.jar" />
 				<fileset dir="${lib.dir}" includes="jlfgr-1_0.jar"/>
 				<fileset dir="${lib.dir}" includes="colt.jar" />
 				<fileset dir="${lib.dir}" includes="sam.jar" />
@@ -666,7 +666,7 @@
         </nbjpdastart>
         <java fork="true" classname="org.bioviz.protannot.ProtAnnotMain">
 			<classpath>
-				<fileset dir="${lib.dir}" includes="freehep-2.1.1.jar" />
+				<fileset dir="${lib.dir}" includes="freehep-graphicsio-svg-2.3.jar" />
 				<fileset dir="${lib.dir}" includes="colt.jar" />
 				<fileset dir="${lib.dir}" includes="sam.jar" />
 				<dirset dir="${basedir}">
