--- a/protannot/ant.properties
+++ b/protannot/ant.properties
@@ -1,4 +1,4 @@
 name=ProtAnnot
 project=protannot
-classpath=${genometry}/build:${genoviz}/build:${lib.dir}/freehep-2.1.1.jar
+classpath=${genometry}/build:${genoviz}/build:${lib.dir}/freehep-graphicsio-svg-2.3.jar
 report.classpath=${classpath}:${lib.dir}/image4j.jar
