IGBF-196 making the overlay to default and toggling the view.

--- a/plugins/SearchView/src/main/resources/search.properties
+++ b/plugins/SearchView/src/main/resources/search.properties
@@ -30,3 +30,5 @@ searchTableMatch=Matched sequence
 
 #tooltips
 advancedSearchTooltip =Search by sequence, keyword, or name.
+
+optionCheckBox=Overlay results
