--- a/core/igb/src/main/resources/igb.properties
+++ b/core/igb/src/main/resources/igb.properties
@@ -81,7 +81,7 @@ addNewSpecies=Open Custom Genome
 exit=Exit
 
 #Export Menu
-exportImage=Export Image
+exportImage=Save Image
 mainView=Main View
 mainViewWithLabels=Main View (With Labels)
 slicedViewWithLabels=Sliced View (With Labels)
