Changing the name of export image to save image.

--- a/core/igb/src/main/resources/igb.properties
+++ b/core/igb/src/main/resources/igb.properties
@@ -81,7 +81,7 @@ addNewSpecies=Open Custom Genome
 exit=Exit
 
 #Export Menu
-exportImage=Save Image
+saveImage=Save Image
 mainView=Main View
 mainViewWithLabels=Main View (With Labels)
 slicedViewWithLabels=Sliced View (With Labels)
@@ -350,7 +350,7 @@ color_by_score=Score
 #Toolbar Icon tooltips
 openFileTooltip=Open a data or sequence file.
 openCustomGenomeTooltip=Open a custom genome.
-exportImageTooltip=Save an image file (PNG, SVG, or JPEG).
+saveImageTooltip=Save an image file (PNG, SVG, or JPEG).
 preferencesTooltip=Open Preferences window. 
 exitTooltip=Quit IGB.
 goToIGBUserGuideTooltip=Open IGB User's Guide in your Web browser.
