--- a/plugins/SearchView/pom.xml
+++ b/plugins/SearchView/pom.xml
@@ -56,6 +56,11 @@
             <artifactId>jide-ultimate</artifactId>
             <scope>provided</scope>
         </dependency>  
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
