better tooltip for residues search box in Advanced Search tab

--- a/plugins/SearchView/src/main/resources/searchmoderesidue.properties
+++ b/plugins/SearchView/src/main/resources/searchmoderesidue.properties
@@ -1,5 +1,5 @@
 searchRegexResidue=Residues
-searchRegexResidueTF=Residues match string or Regular Expression
+searchRegexResidueTF=Enter sequence or pattern to search residues.
 searchErrorNotLoaded=Residues for {0} not available.  Please load residues before searching.
 searchErrorShort=Search must contain at least 4 characters
 searchErrorSyntax=Regular expression syntax error...\n{0}
