IGBF-188 Global search to replace export to save image.

--- a/plugins/SequenceViewer/src/main/resources/sequenceviewer.properties
+++ b/plugins/SequenceViewer/src/main/resources/sequenceviewer.properties
@@ -17,7 +17,7 @@ showAllNegativeTranslations = All - Translations
 ViewGenomicSequenceInSeqViewer=View Genomic Sequence
 ViewReadSequenceInSeqViewer=View Read Sequence
 fastasequence=Save As Fasta
-exportImage=Export Image
+saveImage=Save Image
 closeSequenceViewer=Close Sequence Viewer
 
 errorMessage=An unknown error occurred. Please use the Help menu to contact the IGB support team for assistance.
