Updating the wording change in view menu.

--- a/core/igb/src/main/resources/igb.properties
+++ b/core/igb/src/main/resources/igb.properties
@@ -400,7 +400,7 @@ changeExpandMaxOptimizeActionTooltip=Optimize stack height for selected annotati
 changeExpandMaxActionToolTip=Change stack height for selected annotation tracks.
 saveSelectedAnnotationActionToolTip=Save selected annotations as file.
 saveTrackActionTooltip=Save selected track as a file.
-togglePropertiesTooltip=Show data tooltip.
+togglePropertiesTooltip=Show data tooltip
 toggleConstantPropertiesTooltip=Show Constant Properties in Tooltip.
 hideDataTooltip=Hide data tooltips. Affects main view only.
 showDataTooltip=Show data tooltips. Affects main view only.
