updated blast url and incremented version for minor release

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,6 @@ www/images/Thumbs.db
 www/release_notes/images/Thumbs.db
 /core/*/junitvmwatcher*
 /igb_exe.jar
+tools/FindJunctions/nbproject/*
+.gradle/*
+.ant-targets-build.xml
