updated git ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,4 @@ www/release_notes/images/Thumbs.db
 .gradle/1.12/
 /developmentPlugins/NCBIPrimer/target/
 /plugins/PairedEndDataPreprocessor/target/
+.ant-targets-build.xml
