--- a/.gitignore
+++ b/.gitignore
@@ -203,3 +203,4 @@ www/release_notes/images/Thumbs.db
 /developmentPlugins/NCBIPrimer/target/
 /plugins/PairedEndDataPreprocessor/target/
 .ant-targets-build.xml
+/plugins/IGBR/target/
