updated name to lowercase

--- a/plugins/IGBR/pom.xml
+++ b/plugins/IGBR/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>igbr</artifactId>
     <packaging>bundle</packaging>
 
-    <name>IGBR</name>
+    <name>igbr</name>
 
     <dependencies>
         <dependency>
