small changes to logging in Activator

--- a/main/pom.xml
+++ b/main/pom.xml
@@ -454,6 +454,7 @@
             <artifactId>jide-ultimate</artifactId>
             <scope>runtime</scope>
         </dependency> 
+        <!--End of plugin module dependencies-->
     </dependencies>
     <build>
         <resources>
