--- a/core/genometryImpl/pom.xml
+++ b/core/genometryImpl/pom.xml
@@ -139,7 +139,8 @@
                             com.affymetrix.genometryImpl.symmetry.impl,
                             com.affymetrix.genometryImpl.thread,
                             com.affymetrix.genometryImpl.util,
-                            com.affymetrix.genometryImpl.weblink
+                            com.affymetrix.genometryImpl.weblink,
+                            com.affymetrix.genometryImpl.tooltip
                         </Export-Package>
                         <Import-Package>com.apple.laf,*;resolution:=optional</Import-Package>
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
