temporary comment on cod in igbSwingExt module code to test if this is causing runtime bug

--- a/plugins/IGBR/pom.xml
+++ b/plugins/IGBR/pom.xml
@@ -24,11 +24,11 @@
             <artifactId>genometryImpl</artifactId>
             <scope>provided</scope>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>com.affymetrix</groupId>
             <artifactId>igbSwingExt</artifactId>
             <scope>provided</scope>	
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.main</artifactId>
