--- a/developmentPlugins/BAMIndexer/pom.xml
+++ b/developmentPlugins/BAMIndexer/pom.xml
@@ -13,14 +13,46 @@
 
     <name>Bam Indexer</name>
     
-     <dependencies>        
+    <dependencies>    
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.main</artifactId>
+            <scope>provided</scope>
+        </dependency>    
         <dependency>
             <groupId>com.affymetrix</groupId>
             <artifactId>igb</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.sf</groupId>
             <artifactId>sam-ext</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.affymetrix</groupId>
+            <artifactId>genoviz</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.affymetrix</groupId>
+            <artifactId>igb-service</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.affymetrix</groupId>
+            <artifactId>igbSwingExt</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.sf</groupId>
+            <artifactId>igb-picard</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.affymetrix</groupId>
+            <artifactId>genometryImpl</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
@@ -63,6 +95,8 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <mavenRepository>${project.parent.basedir}/extbundles</mavenRepository>
+                    <obrRepository>${project.parent.basedir}/extbundles</obrRepository>
                     <instructions>
                         <Export-Package/>
                         <Bundle-Activator>com.affymetrix.igb.bamindexer.Activator</Bundle-Activator>                        
