--- a/developmentPlugins/ThousandGenomesServerType/pom.xml
+++ b/developmentPlugins/ThousandGenomesServerType/pom.xml
@@ -13,14 +13,56 @@
     <packaging>jar</packaging>
 
     <name>thousandGenomesServerType</name>
-    <dependencies>
+    <dependencies>        
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.main</artifactId>
+            <scope>provided</scope>
+        </dependency>    
         <dependency>
             <groupId>com.affymetrix</groupId>
-            <artifactId>igb</artifactId>    
+            <artifactId>igb</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.sf</groupId>
+            <artifactId>sam-ext</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.affymetrix</groupId>
+            <artifactId>genoviz</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.affymetrix</groupId>
+            <artifactId>igb-service</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.affymetrix</groupId>
+            <artifactId>igbSwingExt</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.sf</groupId>
+            <artifactId>igb-picard</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.affymetrix</groupId>
+            <artifactId>genometryImpl</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.affymetrix</groupId>
+            <artifactId>affymetrix-common</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
@@ -63,6 +105,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <obrRepository>${project.parent.basedir}/extbundles</obrRepository>    
                     <instructions>
                         <Export-Package/>
                         <Bundle-Activator>com.gene.thousandgenomesservertype.Activator</Bundle-Activator>
